<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:padding="5dp"
    android:textAlignment="center">

    <ImageView
        android:id="@+id/projectIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/download" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:text="@string/Project_description"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txt_Description"
        app:layout_constraintStart_toStartOf="@+id/txt_Description"
        app:layout_constraintTop_toBottomOf="@+id/projectIcon" />

    <TextView
        android:id="@+id/txt_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:padding="2dp"
        android:text="@string/dummyText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="2dp"
        android:text="@string/project_problem"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/textView15"
        app:layout_constraintStart_toStartOf="@+id/txt_Description"
        app:layout_constraintTop_toBottomOf="@+id/txt_Description" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="4"
        android:padding="2dp"
        android:text="@string/dummyText"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/img_downloadFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/ic_file_download" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/download_file"
        android:textColor="@color/Profile_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_downloadFile"
        app:layout_constraintStart_toEndOf="@+id/img_downloadFile"
        app:layout_constraintTop_toTopOf="@+id/img_downloadFile" />

    <ImageView
        android:id="@+id/img_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="@+id/img_downloadFile"
        app:layout_constraintStart_toStartOf="@+id/img_downloadFile"
        app:layout_constraintTop_toBottomOf="@+id/img_downloadFile"
        app:srcCompat="@drawable/ic_like" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/like"
        android:textColor="@color/Profile_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_like"
        app:layout_constraintStart_toEndOf="@+id/img_like"
        app:layout_constraintTop_toTopOf="@+id/img_like" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/img_like"
        app:layout_constraintTop_toTopOf="@+id/img_like"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_follow"
        tools:layout_editor_absoluteX="328dp" />

    <TextView
        android:id="@+id/txt_Follow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Follow_project"
        android:textColor="@color/Profile_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />
</androidx.constraintlayout.widget.ConstraintLayout>